--- a/index.html
+++ b/index.html
@@ -21,63 +21,141 @@
     .btn-syllabus:hover {
       transform: scale(1.05);
     }
+    #mainContent { display: none; }
+    #loginContainer {
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #f4f6f8;
+    }
   </style>
 </head>
 <body oncontextmenu="return false" onkeydown="return disableInspect(event)" oncopy="showWarning()" onpaste="showWarning()">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">IDM TECHPARK</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="html.html">HTML</a></li>
-          <li class="nav-item"><a class="nav-link" href="css.html">CSS</a></li>
-          <li class="nav-item"><a class="nav-link" href="javascript.html">JavaScript</a></li>
-          <li class="nav-item"><a class="nav-link" href="react.html">React</a></li>
-          <li class="nav-item"><a class="nav-link" href="nodejs.html">Node.js</a></li>
-          <li class="nav-item"><a class="nav-link" href="mongodb.html">MongoDB</a></li>
-        </ul>
+  <!-- Login Page -->
+  <div id="loginContainer">
+    <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
+      <h3 class="text-center mb-3">Login to IDM TECHPARK</h3>
+      <input type="text" id="username" class="form-control mb-3" placeholder="Username" />
+      <input type="password" id="password" class="form-control mb-3" placeholder="Password" />
+      <button class="btn btn-primary w-100" onclick="checkLogin()">Login</button>
+    </div>
+  </div>
+
+  <!-- Main Content -->
+  <div id="mainContent">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">IDM TECHPARK</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="html.html">HTML</a></li>
+            <li class="nav-item"><a class="nav-link" href="css.html">CSS</a></li>
+            <li class="nav-item"><a class="nav-link" href="javascript.html">JavaScript</a></li>
+            <li class="nav-item"><a class="nav-link" href="react.html">React</a></li>
+            <li class="nav-item"><a class="nav-link" href="nodejs.html">Node.js</a></li>
+            <li class="nav-item"><a class="nav-link" href="mongodb.html">MongoDB</a></li><li class="nav-item">
+              <a class="btn btn-danger" href="#" onclick="logout()">Logout</a>
+            </li>
+            
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="hero" data-aos="fade-up">
+      <h1>Welcome to IDM TECHPARK</h1>
+      <p>Your journey into full stack development starts here. Explore the syllabus and track your progress easily!</p>
+    </div>
+
+    <div class="container text-center my-5">
+      <h2 class="mb-4" data-aos="zoom-in">Available Syllabuses</h2>
+      <div class="row g-4">
+        <div class="col-md-4" data-aos="fade-up"><a href="html.html" class="btn btn-outline-primary w-100 btn-syllabus">HTML5 Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100"><a href="css.html" class="btn btn-outline-primary w-100 btn-syllabus">CSS3 Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="100"><a href="boot.html" class="btn btn-outline-primary w-100 btn-syllabus">Bootstrap 5.3 Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="200"><a href="javascript.html" class="btn btn-outline-primary w-100 btn-syllabus">JavaScript(ES6) Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="300"><a href="react.html" class="btn btn-outline-primary w-100 btn-syllabus">React Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><a href="nodejs.html" class="btn btn-outline-primary w-100 btn-syllabus">Node.js Syllabus</a></div>
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="500"><a href="mongodb.html" class="btn btn-outline-primary w-100 btn-syllabus">MongoDB Syllabus</a></div>
       </div>
     </div>
-  </nav>
 
-  <div class="hero" data-aos="fade-up">
-    <h1>Welcome to IDM TECHPARK</h1>
-    <p>Your journey into full stack development starts here. Explore the syllabus and track your progress easily!</p>
-  </div>
-
-  <div class="container text-center my-5">
-    <h2 class="mb-4" data-aos="zoom-in">Available Syllabuses</h2>
-    <div class="row g-4">
-      <div class="col-md-4" data-aos="fade-up"><a href="html.html" class="btn btn-outline-primary w-100 btn-syllabus">HTML Syllabus</a></div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="100"><a href="css.html" class="btn btn-outline-primary w-100 btn-syllabus">CSS Syllabus</a></div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="200"><a href="javascript.html" class="btn btn-outline-primary w-100 btn-syllabus">JavaScript Syllabus</a></div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="300"><a href="react.html" class="btn btn-outline-primary w-100 btn-syllabus">React Syllabus</a></div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="400"><a href="nodejs.html" class="btn btn-outline-primary w-100 btn-syllabus">Node.js Syllabus</a></div>
-      <div class="col-md-4" data-aos="fade-up" data-aos-delay="500"><a href="mongodb.html" class="btn btn-outline-primary w-100 btn-syllabus">MongoDB Syllabus</a></div>
+    <div class="footer">
+      <p>📞 <strong>Phone:</strong> <a href="tel:9585305700">9585305700</a> | ✉️ <strong>Email:</strong> <a href="mailto:info@idmtechpark.com">info@idmtechpark.com</a></p>
+      <p>🌐 <a href="https://www.idmtechpark.com/" target="_blank">www.idmtechpark.com</a> | 📸 <a href="https://www.instagram.com/idmtechparkofficial/" target="_blank">Instagram</a></p>
     </div>
-  </div>
-
-  <div class="footer">
-    <p>📞 <strong>Phone:</strong> <a href="tel:9585305700">9585305700</a> | ✉️ <strong>Email:</strong> <a href="mailto:info@idmtechpark.com">info@idmtechpark.com</a></p>
-    <p>🌐 <a href="https://www.idmtechpark.com/" target="_blank">www.idmtechpark.com</a> | 📸 <a href="https://www.instagram.com/idmtechparkofficial/" target="_blank">Instagram</a></p>
   </div>
 
   <script>
+    // Auto check login on page load
+    window.onload = function () {
+      if (localStorage.getItem("isLoggedIn") === "true") {
+        document.getElementById("loginContainer").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
+      } else {
+        document.getElementById("loginContainer").style.display = "flex";
+        document.getElementById("mainContent").style.display = "none";
+      }
+    };
+  
+    function checkLogin() {
+      const user = document.getElementById("username").value;
+      const pass = document.getElementById("password").value;
+  
+      if (user === "idmStudent" && pass === "idm2020") {
+        Swal.fire({
+          icon: "success",
+          title: "Login Successful!",
+          showConfirmButton: false,
+          timer: 1500
+        });
+        localStorage.setItem("isLoggedIn", "true");
+        document.getElementById("loginContainer").style.display = "none";
+        document.getElementById("mainContent").style.display = "block";
+      } else {
+        Swal.fire({
+          icon: "error",
+          title: "Invalid Credentials",
+          text: "Please check your username or password.",
+          confirmButtonText: "Retry"
+        });
+      }
+    }
+  
+    function logout() {
+      localStorage.removeItem("isLoggedIn");
+      Swal.fire({
+        icon: "info",
+        title: "Logged out",
+        showConfirmButton: false,
+        timer: 1200
+      }).then(() => {
+        document.getElementById("loginContainer").style.display = "flex";
+        document.getElementById("mainContent").style.display = "none";
+      });
+    }
+  
     function showWarning() {
       Swal.fire({ icon: 'warning', title: 'Action Blocked!', text: 'This action is not allowed.', confirmButtonText: 'OK' });
     }
-
+  
     function disableInspect(e) {
-      if (e.keyCode == 123 || (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 67 || e.keyCode === 74)) || (e.ctrlKey && e.keyCode === 85)) {
+      if (
+        e.keyCode == 123 || 
+        (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 67 || e.keyCode === 74)) || 
+        (e.ctrlKey && e.keyCode === 85)
+      ) {
         showWarning();
         return false;
       }
     }
   </script>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>AOS.init();</script>
