--- a/boot.html
+++ b/boot.html
@@ -55,6 +55,9 @@
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="react.html">React</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="nodejs.html">Node.js</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="mongodb.html">MongoDB</a></li>
+          <button id="logoutBtn" class="btn btn-danger">Logout</button>
+
+
         </ul>
       </div>
     </div>
@@ -65,7 +68,9 @@
     <div class="progress">
       <div class="progress-bar" id="progressBar" role="progressbar" style="width: 0%">0%</div>
     </div>
-    <button class="btn btn-danger top-right-btn" onclick="resetProgress()">Reset</button>
+    <!-- <button class="btn btn-sm btn-outline-danger reset-btn " onclick="resetProgress()">Reset</button> -->
+    
+
     <div id="syllabusList"></div>
     <div class="mt-4">
      
@@ -253,6 +258,37 @@
       e.preventDefault();
       Swal.fire("Pasting disabled");
     });
+    function resetProgress() {
+      Swal.fire({
+        title: 'Reset Progress?',
+        text: 'This will clear all your progress data.',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, reset it!'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          localStorage.removeItem('checkboxStates');
+          location.reload();
+        }
+      });
+    }
+    document.getElementById("logoutBtn").addEventListener("click", function () {
+    // Clear localStorage or specific login key
+    localStorage.removeItem("isLoggedIn");
+
+    // SweetAlert logout message
+    Swal.fire({
+      icon: 'success',
+      title: 'Logged out!',
+      text: 'You have been successfully logged out.',
+      timer: 2000,
+      showConfirmButton: false,
+      willClose: () => {
+        // Redirect to login page
+        window.location.href = "index.html";
+      }
+    });
+  });
   </script>
 </body>
 
