--- a/css.html
+++ b/css.html
@@ -67,12 +67,16 @@
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="react.html">React</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="nodejs.html">Node.js</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="mongodb.html">MongoDB</a></li>
+          <button id="logoutBtn" class="btn btn-danger">Logout</button>
+
+
         </ul>
       </div>
     </div>
   </nav>
   <div class="container">
-    <button class="btn btn-sm btn-outline-primary print-btn" onclick="window.print()">🖨️ Print</button>
+    
+    
     <button class="btn btn-sm btn-outline-danger reset-btn" onclick="resetProgress()">♻️ Reset</button>
 
     <div class="d-flex justify-content-between align-items-center mb-3">
@@ -217,6 +221,37 @@
         }
       });
     }
+    function resetProgress() {
+      Swal.fire({
+        title: 'Reset Progress?',
+        text: 'This will clear all your progress data.',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonText: 'Yes, reset it!'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          localStorage.removeItem('checkboxStates');
+          location.reload();
+        }
+      });
+    }
+    document.getElementById("logoutBtn").addEventListener("click", function () {
+    // Clear localStorage or specific login key
+    localStorage.removeItem("isLoggedIn");
+
+    // SweetAlert logout message
+    Swal.fire({
+      icon: 'success',
+      title: 'Logged out!',
+      text: 'You have been successfully logged out.',
+      timer: 2000,
+      showConfirmButton: false,
+      willClose: () => {
+        // Redirect to login page
+        window.location.href = "index.html";
+      }
+    });
+  });
   </script>
 </body>
 </html>
