--- a/html.html
+++ b/html.html
@@ -71,6 +71,10 @@
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="react.html">React</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="nodejs.html">Node.js</a></li>
           <li class="nav-item"><a class="nav-link text-light fw-bold" href="mongodb.html">MongoDB</a></li>
+          <button id="logoutBtn" class="btn btn-danger">Logout</button>
+      
+
+
         </ul>
       </div>
     </div>
@@ -221,6 +225,23 @@
         }
       });
     }
+    document.getElementById("logoutBtn").addEventListener("click", function () {
+    // Clear localStorage or specific login key
+    localStorage.removeItem("isLoggedIn");
+
+    // SweetAlert logout message
+    Swal.fire({
+      icon: 'success',
+      title: 'Logged out!',
+      text: 'You have been successfully logged out.',
+      timer: 2000,
+      showConfirmButton: false,
+      willClose: () => {
+        // Redirect to login page
+        window.location.href = "index.html";
+      }
+    });
+  });
 
    
   </script>
