--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IDM TECHPARK - Syllabus Portal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
@@ -15,12 +15,8 @@
     .hero p { font-size: 1.3rem; }
     .footer { background: #212529; color: #ddd; padding: 20px 0; text-align: center; margin-top: 40px; }
     .footer a { color: #0d6efd; text-decoration: none; }
-    .btn-syllabus {
-      padding: 1.2rem; font-size: 1.2rem; transition: transform 0.3s ease;
-    }
-    .btn-syllabus:hover {
-      transform: scale(1.05);
-    }
+    .btn-syllabus { padding: 1.2rem; font-size: 1.2rem; transition: transform 0.3s ease; }
+    .btn-syllabus:hover { transform: scale(1.05); }
     #mainContent { display: none; }
     #loginContainer {
       min-height: 100vh;
@@ -40,6 +36,7 @@
       <input type="text" id="username" class="form-control mb-3" placeholder="Username" />
       <input type="password" id="password" class="form-control mb-3" placeholder="Password" />
       <button class="btn btn-primary w-100" onclick="checkLogin()">Login</button>
+      <a href="register.html" class="btn btn-link mt-2">Don't have an account? Register</a>
     </div>
   </div>
 
@@ -58,10 +55,10 @@
             <li class="nav-item"><a class="nav-link" href="javascript.html">JavaScript</a></li>
             <li class="nav-item"><a class="nav-link" href="react.html">React</a></li>
             <li class="nav-item"><a class="nav-link" href="nodejs.html">Node.js</a></li>
-            <li class="nav-item"><a class="nav-link" href="mongodb.html">MongoDB</a></li><li class="nav-item">
+            <li class="nav-item"><a class="nav-link" href="mongodb.html">MongoDB</a></li>
+            <li class="nav-item">
               <a class="btn btn-danger" href="#" onclick="logout()">Logout</a>
             </li>
-            
           </ul>
         </div>
       </div>
@@ -92,7 +89,8 @@
   </div>
 
   <script>
-    // Auto check login on page load
+    const API_URL = "https://6427ac13161067a83bfeffb4.mockapi.io/syllabus-api";
+
     window.onload = function () {
       if (localStorage.getItem("isLoggedIn") === "true") {
         document.getElementById("loginContainer").style.display = "none";
@@ -102,52 +100,45 @@
         document.getElementById("mainContent").style.display = "none";
       }
     };
-  
-    function checkLogin() {
-      const user = document.getElementById("username").value;
-      const pass = document.getElementById("password").value;
-  
-      if (user === "idmStudent" && pass === "idm2020") {
-        Swal.fire({
-          icon: "success",
-          title: "Login Successful!",
-          showConfirmButton: false,
-          timer: 1500
-        });
-        localStorage.setItem("isLoggedIn", "true");
-        document.getElementById("loginContainer").style.display = "none";
-        document.getElementById("mainContent").style.display = "block";
-      } else {
-        Swal.fire({
-          icon: "error",
-          title: "Invalid Credentials",
-          text: "Please check your username or password.",
-          confirmButtonText: "Retry"
-        });
+
+    async function checkLogin() {
+      const email = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+      try {
+        const response = await fetch(`${API_URL}`);
+        const users = await response.json();
+        const user = users.find(u => u.email === email && u.password === password);
+
+        if (user) {
+          Swal.fire({ icon: "success", title: "Login Successful!", timer: 1500, showConfirmButton: false });
+          localStorage.setItem("isLoggedIn", "true");
+          document.getElementById("loginContainer").style.display = "none";
+          document.getElementById("mainContent").style.display = "block";
+        } else {
+          Swal.fire({ icon: "error", title: "Invalid Credentials", text: "Please check your email or password." });
+        }
+      } catch (error) {
+        Swal.fire({ icon: "error", title: "Error", text: "Something went wrong. Try again!" });
       }
     }
-  
+
     function logout() {
       localStorage.removeItem("isLoggedIn");
-      Swal.fire({
-        icon: "info",
-        title: "Logged out",
-        showConfirmButton: false,
-        timer: 1200
-      }).then(() => {
+      Swal.fire({ icon: "info", title: "Logged out", timer: 1200, showConfirmButton: false }).then(() => {
         document.getElementById("loginContainer").style.display = "flex";
         document.getElementById("mainContent").style.display = "none";
       });
     }
-  
+
     function showWarning() {
       Swal.fire({ icon: 'warning', title: 'Action Blocked!', text: 'This action is not allowed.', confirmButtonText: 'OK' });
     }
-  
+
     function disableInspect(e) {
       if (
-        e.keyCode == 123 || 
-        (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 67 || e.keyCode === 74)) || 
+        e.keyCode == 123 ||
+        (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 67 || e.keyCode === 74)) ||
         (e.ctrlKey && e.keyCode === 85)
       ) {
         showWarning();
@@ -155,7 +146,7 @@
       }
     }
   </script>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
   <script>AOS.init();</script>
