--- a/register.html
+++ b/register.html
@@ -12,19 +12,23 @@
     <input type="text" id="name" class="form-control mb-2" placeholder="Full Name">
     <input type="email" id="email" class="form-control mb-2" placeholder="Email">
     <input type="text" id="mobile" class="form-control mb-2" placeholder="Mobile Number">
-    <input type="password" id="password" class="form-control mb-2" placeholder="Password">
-    <input type="password" id="confirmPassword" class="form-control mb-3" placeholder="Confirm Password">
+
+    <div class="input-group mb-2">
+      <input type="password" id="password" class="form-control" placeholder="Password">
+      <button class="btn btn-outline-secondary" type="button" onclick="togglePassword('password', this)">Show</button>
+    </div>
+
+    <div class="input-group mb-3">
+      <input type="password" id="confirmPassword" class="form-control" placeholder="Confirm Password">
+      <button class="btn btn-outline-secondary" type="button" onclick="togglePassword('confirmPassword', this)">Show</button>
+    </div>
+
     <button class="btn btn-primary w-100" onclick="registerUser()">Register</button>
     <a href="index.html" class="btn btn-link mt-2">Back to Login</a>
   </div>
 
   <script>
     const API_URL = "https://6427ac13161067a83bfeffb4.mockapi.io/syllabus-api";
-
-    function isStrongPassword(password) {
-      const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}$/;
-      return regex.test(password);
-    }
 
     async function registerUser() {
       const name = document.getElementById("name").value.trim();
@@ -37,42 +41,34 @@
         return Swal.fire("All fields are required!", "", "warning");
       }
 
-      if (!isStrongPassword(password)) {
-        return Swal.fire("Weak Password", 
-          "Password must be at least 8 characters long and include uppercase, lowercase, number, and special character.", 
-          "warning");
-      }
-
       if (password !== confirmPassword) {
         return Swal.fire("Passwords do not match!", "", "error");
       }
 
-      try {
-        const checkResponse = await fetch(API_URL);
-        const existingUsers = await checkResponse.json();
-        const existingUser = existingUsers.find(user => user.email === email);
+      // Password strength check (min 8 characters, 1 uppercase, 1 lowercase, 1 number)
+      const strongPassword = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{8,}$/;
+      if (!strongPassword.test(password)) {
+        return Swal.fire("Weak Password", "Password must be at least 8 characters and include uppercase, lowercase, and a number.", "warning");
+      }
 
-        if (existingUser) {
-          return Swal.fire({
-            icon: "info",
-            title: "User Already Registered",
-            text: "Please login or use a different email.",
-          });
+      try {
+        const res = await fetch(API_URL);
+        const users = await res.json();
+        const userExists = users.some(u => u.email === email);
+
+        if (userExists) {
+          return Swal.fire("Already Registered", "This email is already used. Please login.", "info");
         }
 
-        const res = await fetch(API_URL, {
+        const response = await fetch(API_URL, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ name, email, mobile, password })
         });
 
-        if (res.ok) {
-          Swal.fire({
-            icon: "success",
-            title: "Registration Successful",
-            timer: 1500,
-            showConfirmButton: false
-          }).then(() => window.location.href = "index.html");
+        if (response.ok) {
+          Swal.fire({ icon: "success", title: "Registration Successful", timer: 1500, showConfirmButton: false })
+            .then(() => window.location.href = "index.html");
         } else {
           Swal.fire("Registration failed", "Try again later", "error");
         }
@@ -81,40 +77,41 @@
       }
     }
 
-     // Disable right-click
-  document.addEventListener('contextmenu', function (e) {
-    e.preventDefault();
-    showWarning();
-  });
-
-  // Disable cut, copy, paste
-  ['cut', 'copy', 'paste'].forEach(evt =>
-    document.addEventListener(evt, function (e) {
-      e.preventDefault();
-      showWarning();
-    })
-  );
-
-  // Disable F12, Ctrl+Shift+I/J/U
-  document.addEventListener('keydown', function (e) {
-    if (
-      e.key === "F12" ||
-      (e.ctrlKey && e.shiftKey && ['I', 'J'].includes(e.key.toUpperCase())) ||
-      (e.ctrlKey && e.key.toUpperCase() === 'U')
-    ) {
-      e.preventDefault();
-      showWarning();
+    function togglePassword(id, btn) {
+      const input = document.getElementById(id);
+      if (input.type === "password") {
+        input.type = "text";
+        btn.textContent = "Hide";
+      } else {
+        input.type = "password";
+        btn.textContent = "Show";
+      }
     }
-  });
+  </script>
 
-  function showWarning() {
-    Swal.fire({
-      icon: 'warning',
-      title: 'Action Blocked!',
-      text: 'This action is not allowed.',
-      confirmButtonText: 'OK'
+  <script>
+    // Disable right-click, copy, cut, paste, and inspect
+    document.addEventListener('contextmenu', e => { e.preventDefault(); showWarning(); });
+    ['copy', 'cut', 'paste'].forEach(evt => document.addEventListener(evt, e => { e.preventDefault(); showWarning(); }));
+    document.addEventListener('keydown', e => {
+      if (
+        e.key === "F12" ||
+        (e.ctrlKey && e.shiftKey && ['I', 'J'].includes(e.key.toUpperCase())) ||
+        (e.ctrlKey && e.key.toUpperCase() === 'U')
+      ) {
+        e.preventDefault();
+        showWarning();
+      }
     });
-  }
+
+    function showWarning() {
+      Swal.fire({
+        icon: 'warning',
+        title: 'Action Blocked!',
+        text: 'This action is not allowed.',
+        confirmButtonText: 'OK'
+      });
+    }
   </script>
 </body>
 </html>
